--- a/web/templates/index.html
+++ b/web/templates/index.html
@@ -4,14 +4,15 @@
 <style>
 #display-image{
   width: 400px;
-  height: 225px;
+  height: 200px;
   border: 1px solid black;
   background-position: center;
   background-size: cover;
+  margin-left: 2%;
 }
 
 body {font-family: Arial, Helvetica, sans-serif;  background-image: url("facerecon.png"); background-position: 30%; color: white;  background-size: 1500px 1500px;}
-form {border: 3px solid #f1f1f1; width: 40%; margin:28%; background-color: black;}
+form {border: 3px solid #f1f1f1; width: 45%; margin:28%; background-color: black;}
 h2 {
 	text-align:center;
 }
@@ -86,6 +87,7 @@ label {
 	 <button name="submit" value="Submit" onClick="formSub();"> 
     Submit
     </button>
+	 <div id="display-image"></div>
   </form>
 <script>
     
